# nrf

samples/bluetooth/nrf_dm/: CMakeLists.txt
